--- a/style1/package.json
+++ b/style1/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "expo": "~49.0.8",
+    "expo-constants": "^14.4.2",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.12.9"
   },
   "private": true
 }
