--- a/stylinglesson/package.json
+++ b/stylinglesson/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "basic-components-app",
+  "name": "stylinglesson",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,10 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.8",
+    "constants": "^0.0.2",
+    "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.4"
+    "react-native": "0.72.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
