--- a/calendar/package.json
+++ b/calendar/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "basic-components-app",
+  "name": "calendar",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,14 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~49.0.8",
-    "expo-status-bar": "~1.6.0",
+    "expo": "~50.0.2",
+    "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.72.4",
-    "expo-constants": "^14.0.2"
+    "react-native": "0.73.2",
+    "react-native-calendars": "^1.1303.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
