--- a/style3/package.json
+++ b/style3/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "expo": "~49.0.8",
+    "expo-constants": "^14.0.2",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.4",
-    "expo-constants": "^14.0.2"
+    "react-native": "0.72.6",
+    "react-native-numeric-input": "^1.9.1",
+    "react-native-paper": "^5.10.4",
+    "react-native-select-dropdown": "^3.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
